增加mongodb的配置

--- a/retgui/src/main/resources/application.properties
+++ b/retgui/src/main/resources/application.properties
@@ -64,7 +64,7 @@ web.view.suffix=.html
 #web.view.suffix=.html
 
 #max upload size. 10M=10*1024*1024(B)=10485760 bytes
-web.maxUploadSize=104857600
+web.maxUploadSize=1048576000
 
 # Redis settings  
 redis.host=10.1.39.64  
