--- a/retgui/pom.xml
+++ b/retgui/pom.xml
@@ -192,7 +192,7 @@
 			<version>1.2</version>
 			<type>jar</type>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
@@ -384,14 +384,14 @@
 			<artifactId>h2</artifactId>
 			<version>1.4.178</version>
 		</dependency>
-		
+
 		<!-- mongodb -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-mongodb</artifactId>
 			<version>1.7.0.RELEASE</version>
 		</dependency>
-		
+
 
 
 		<!-- TEST begin -->
@@ -432,7 +432,21 @@
 
 		<!-- TEST end -->
 
-		<!-- TEST begin -->
+
+		<!-- Shiro Begin -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-all</artifactId>
+			<version>1.2.3</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-cas</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+		<!-- Shiro end -->
 
 	</dependencies>
 
