--- a/retgui/src/main/webapp/WEB-INF/web.xml
+++ b/retgui/src/main/webapp/WEB-INF/web.xml
@@ -10,13 +10,11 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath*:/applicationContext*.xml
+			classpath:/applicationContext.xml;
 		</param-value>
 	</context-param>
-	<!-- <context-param>
-		<param-name>spring.profiles.default</param-name>
-		<param-value>dev</param-value>
-	</context-param> -->
+	<!-- <context-param> <param-name>spring.profiles.default</param-name> <param-value>dev</param-value> 
+		</context-param> -->
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -52,7 +50,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	
+
 	<!-- Spring MVC -->
 	<servlet>
 		<servlet-name>springServlet</servlet-name>
@@ -68,7 +66,16 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-	
+	<!-- <filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+	</filter-mapping> -->
 
 	<filter>
 		<filter-name>HttpMethodFilter</filter-name>
@@ -80,7 +87,7 @@
 	</filter-mapping>
 
 
-	
+
 
 	<!-- Session 配置 -->
 	<session-config>
